--- a/red-bicicletas/red_bicicletas/package.json
+++ b/red-bicicletas/red_bicicletas/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www"
+    "devstart": "nodemon ./bin/www",
+    "test": "jasmine"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,10 +13,13 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.6.0",
+    "mongoose": "^6.4.0",
     "morgan": "~1.9.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
+    "jasmine": "^4.2.0",
     "nodemon": "^2.0.16"
   }
 }
