--- a/red-bicicletas/red_bicicletas/package.json
+++ b/red-bicicletas/red_bicicletas/package.json
@@ -13,6 +13,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.6.0",
+    "moment": "^2.29.3",
+    "mongodb": "^4.7.0",
     "mongoose": "^6.4.0",
     "morgan": "~1.9.1",
     "pug": "^3.0.2",
