--- a/red-bicicletas/red_bicicletas/package.json
+++ b/red-bicicletas/red_bicicletas/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.4.0",
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.7.5",
     "pug": "^3.0.2",
     "request": "^2.88.2"
   },
