--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ node_modules
 index.html
 js.js
 mongosh-1.5.0-win32-x64
+package-lock.json
+package.json
+red-bicicletas/red_bicicletas/package-lock.json
