--- a/red-bicicletas/red_bicicletas/package.json
+++ b/red-bicicletas/red_bicicletas/package.json
@@ -21,8 +21,10 @@
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "~1.9.1",
     "nodemailer": "^6.7.5",
+    "path": "^0.12.7",
     "pug": "^3.0.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "router": "^1.3.7"
   },
   "devDependencies": {
     "jasmine": "^4.2.0",
