--- a/red-bicicletas/red_bicicletas/package.json
+++ b/red-bicicletas/red_bicicletas/package.json
@@ -8,18 +8,26 @@
     "test": "jasmine"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "chokidar": "^3.5.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.6.0",
+    "moment": "^2.29.3",
+    "mongodb": "^4.7.0",
     "mongoose": "^6.4.0",
+    "mongoose-unique-validator": "^3.1.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.7.5",
+    "path": "^0.12.7",
     "pug": "^3.0.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "router": "^1.3.7"
   },
   "devDependencies": {
     "jasmine": "^4.2.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^1.3.3"
   }
 }
