--- a/red-bicicletas/red_bicicletas/package.json
+++ b/red-bicicletas/red_bicicletas/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "jquery": "^3.6.0",
     "moment": "^2.29.3",
@@ -21,10 +22,13 @@
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "~1.9.1",
     "nodemailer": "^6.7.5",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pug": "^3.0.2",
     "request": "^2.88.2",
-    "router": "^1.3.7"
+    "router": "^1.3.7",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "jasmine": "^4.2.0",
